test/src/e2e_vm_tests/test_programs/should_pass/dump_impls_enum/src/lib.sw
library;

enum MyEnum {
    A: ()
}

trait MyTrait {

}

impl MyTrait for MyEnum {}
